fixed answer radio-buttons right margin on small screens and added border radius

--- a/styles.css
+++ b/styles.css
@@ -28,8 +28,6 @@ body {
 
 input[type="radio"] {
     visibility: hidden;
-    padding-left: 3rem;
-    padding-right: 3rem;
     margin-left: 3%;
     
 }
@@ -45,6 +43,7 @@ span:hover {
 
 .radio_button {
     padding: 1.5rem;
+    border-radius: 1rem;
 }
 
 .correct-answer {
@@ -63,7 +62,7 @@ span:hover {
 }
 
 .dissabled-mouse {
-    pointer-events: inherit;
+    pointer-events: none;
 }
 
 .modal-dialog {
@@ -73,7 +72,7 @@ span:hover {
 
 span {
     display: inline-block;
-    width: 99%;
+    width: 95%;
     height: 100%;
 }
 
